--- a/environment-test/rust_call_c/call_c/Cargo.toml
+++ b/environment-test/rust_call_c/call_c/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "call_c"
 version = "0.1.0"
-edition = "2018"
+build = "build.rs"
+# edition
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-build = "build.rs"
 
 [dependencies]
 libc = "0.2"
