--- a/atom_demos/weather-cli/Cargo.toml
+++ b/atom_demos/weather-cli/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.56"
 serde_derive = "1.0.114"
 reqwest = {version = "0.11",features = ["json"]}
 tokio = {version = "1",features = ["full"]}
+chrono = { version = "0.4", features = ["serde"] }
